laksyayoga intro almost finito

--- a/bindu.bib
+++ b/bindu.bib
@@ -353,7 +353,7 @@ address={Lonavla},
 
 @book{yuktabhavadeva, 
 title={Yuktabhavadeva},
-subtitle={Yuktabhavadeva of Bhavadeva Miśra,}, 
+subtitle={Yuktabhavadeva of Bhavadeva Miśra}, 
 editor={Gharote, M.L. and Jha, V.K.}, 
 year={2002},
 publisher={Lonavla Yoga Institute}, 
@@ -1049,6 +1049,23 @@ address={The Hague},
   year={2011},
   publisher={Brill},
   keywords={printsource},
+}
+
+@book{yogasutra,
+  title={Pātañjalayogaśāstra},
+  subtitle={Yoga Philosophy of Patañjali},
+  author={Hariharānanda Āraṇya},
+  editor={Mukerji, P.N.},
+  year={1983},
+  publisher={State University of New York Press},
+  keywords={printsource},
+}
+
+@book{yogasutraed,
+   title={Pātañjalayogaśāstra},
+   note={See Edition in Yoga Philosophy of Patañjali by Editor Mukerji, P.N. (1983)},
+   pages={11-407}, 
+   keywords={printsource},
 }
 
 @book{yogasutra,
@@ -2106,8 +2123,6 @@ keywords={printsource},
    keywords={printsource},
 }
 
-
- title={Śivayogapradīpikā},
 
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
