--- a/preamble.tex
+++ b/preamble.tex
@@ -40,7 +40,7 @@
 \usepackage[singlelinecheck=false]{caption}
 \usepackage{ragged2e}
 \usepackage{longtable}
-
+\usepackage{pdflscape}
 
 %\usepackage{bigfoot}
 %%% more functions
@@ -207,6 +207,8 @@ hpbmk = \textcolor{red}{hpb}
 %\DeclareWitness{D2}{\selectlanguage{english}D\textsubscript{2}}{IGNCA 30020}[]  
 \DeclareWitness{U1}{\selectlanguage{english}U\textsubscript{1}}{SORI 1574}[] 
 \DeclareWitness{U2}{\selectlanguage{english}U\textsubscript{2}}{SORI 6082}[]
+\DeclareWitness{PT}{\selectlanguage{english}PT}{Prāṇatoṣiṇī}[]
+\DeclareWitness{YK}{\selectlanguage{english}YK}{Yogakarṇikā}[]
 %%%%%%%%%%%%%% Tattvabinduyoga - Groups of Witnesses   %%%%%%%%%%%%%%%%%%%
 \DeclareWitness{X}{\selectlanguage{english}\alpha}{Alpha Group: D,N1,N2,U1}[]
 \DeclareWitness{Y}{\selectlanguage{english}\beta}{Beta Group: B,E,L,P,U2}[]
