--- a/intro.bib
+++ b/intro.bib
@@ -158,7 +158,7 @@ keywords={seclit},
 
 @book{mrgendragamabrunner,
   title = {Mṛgendrāgama. Section des rites et section du comportement Avec la Vṛtti de Bhaṭṭanārāyaṇakanṭha},
-  author = {Mṛgendrāgama and Brunner-Lachaux, Hélène},
+  author = {Brunner-Lachaux, Hélène},
   year = {1985},
   publisher = {Institut Français de Pondichéry},
   series = {Collection Indologie},
@@ -353,7 +353,7 @@ address={Lonavla},
 
 @book{yuktabhavadeva, 
 title={Yuktabhavadeva},
-subtitle={Yuktabhavadeva of Bhavadeva Miśra,}, 
+subtitle={Yuktabhavadeva of Bhavadeva Miśra}, 
 editor={Gharote, M.L. and Jha, V.K.}, 
 year={2002},
 publisher={Lonavla Yoga Institute}, 
@@ -1054,6 +1054,23 @@ address={The Hague},
 @book{yogasutra,
   title={Pātañjalayogaśāstra},
   subtitle={Yoga Philosophy of Patañjali},
+  author={Hariharānanda Āraṇya},
+  editor={Mukerji, P.N.},
+  year={1983},
+  publisher={State University of New York Press},
+  keywords={printsource},
+}
+
+@book{yogasutraed,
+   title={Pātañjalayogaśāstra},
+   note={See Edition in Yoga Philosophy of Patañjali by Editor Mukerji, P.N. (1983)},
+   pages={11-407}, 
+   keywords={printsource},
+}
+
+@book{yogasutra,
+  title={Pātañjalayogaśāstra},
+  subtitle={Yoga Pahilosophy of Patañjali},
   author={Hariharānanda Āraṇya},
   editor={Mukerji, P.N.},
   year={1983},
@@ -1958,7 +1975,8 @@ address={Delhi},
 
 
 @article{mallinson2012sataka,
-  title={The Original Gorakṣaśataka},
+  title={Gorakṣaśataka},
+  subtitle={The Original Gorakṣaśataka},
   author= {Mallinson, James},
   year= {2012},
   journal= {Yoga in Practice},
@@ -2088,9 +2106,8 @@ keywords={printsource},
    keywords={printsource},
  }
 
-@book{shivayogapradipika,
-   title={Śivayogapradīpikā},
-   subtitle={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
+@book{shivayogapradipikax,
+   title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    editor={Powell, Seth David},   
    year={2023},
    note={Dissertation as submitted on April 2023}, 
@@ -2098,6 +2115,14 @@ keywords={printsource},
    address={Cambridge, Massachusetts},
    keywords={printsource},
  }
+
+@book{shivayogapradipika,
+   title={Śivayogapradīpikā},
+   note={See A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
+   pages={268-313}, 
+   keywords={printsource},
+}
+
 
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
