intro until shivayoga

--- a/bindu.bib
+++ b/bindu.bib
@@ -1746,6 +1746,14 @@ keywords={printsource},
    keywords={seclit},
 }
 
+@article{sanderson2004,
+  author    = {Alexis Sanderson},
+  title     = {Religion and the State: \textit{{\S}aiva Officiants} in the Territory of the Brahmanical Royal Chaplain (with an appendix on the provenance and date of the \textit{Netratantra})},
+  journal   = {Indo-Iranian Journal},
+  volume    = {47},
+  year      = {2004},
+  pages     = {229--300}
+}
 
 @article{mallinson2014,
    title={Nāth Sampradāya},
@@ -1904,6 +1912,15 @@ keywords={printsource},
   keywords={printsource},
 }
 
+@book{horstmann2023shrine,
+  author    = {Horstmann, Monika and Rajpurohit, Dalpat S.},
+  title     = {In the Shrine of the Heart: Sants of Rajasthan from the Sixteenth and Seventeenth Centuries},
+  publisher = {Heidelberg Asian Studies Publishing},
+  year      = {2023},
+  address   = {Heidelberg},
+  doi       = {10.11588/hasp.1151},
+  url       = {https://doi.org/10.11588/hasp.1151}
+}
 
 @book{tanselle1989,
   title={A rationale of textual criticism},
@@ -2221,6 +2238,16 @@ keywords={printsource},
     keywords={printsource},
 }
 
+@book{glasenapp1949philosophie,
+  author = {Glasenapp, Helmuth von},
+  title = {Die Philosophie der Inder},
+  year = {1949},
+  publisher = {Alfred Kröner Verlag},
+  address = {Stuttgart},
+  edition = {1},
+  keywords={seclit},
+}
+
 @book{encyclopediaasana,
     title={Encyclopedia of Traditional Asanas},
     editor={Gharote, Dr. M. L. and Jha, Dr. V. K. and Devnath, Dr. Parimal and Sakhalkar, Dr. S. B.},
@@ -2384,6 +2411,13 @@ keywords={seclit},
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
+}
+
+@codex{yogasarasangraha,
+  title = {Yogasārasaṅgraha},
+  address = {French Institute of Pondicherry (IFP)},
+  note = {Manuscript IFP transcript T.859, Manuscript D.4373, Government Oriental Manuscripts Library (GOML), Madras}
+  keywords={codex},
 }
 
 @codex{yogacintamanilahore,
