--- a/intro.bib
+++ b/intro.bib
@@ -1746,6 +1746,14 @@ keywords={printsource},
    keywords={seclit},
 }
 
+@article{sanderson2004,
+  author    = {Alexis Sanderson},
+  title     = {Religion and the State: \textit{{\S}aiva Officiants} in the Territory of the Brahmanical Royal Chaplain (with an appendix on the provenance and date of the \textit{Netratantra})},
+  journal   = {Indo-Iranian Journal},
+  volume    = {47},
+  year      = {2004},
+  pages     = {229--300}
+}
 
 @article{mallinson2014,
    title={Nāth Sampradāya},
