improved edition on kamalam samketa adbhuta and intro finished brahmayoga

--- a/bindu.bib
+++ b/bindu.bib
@@ -1476,8 +1476,6 @@ Sound},
   keywords={printsource},
 }
 
-
-
 @book{urban2010,
   title={The Power of Tantra: Religion, Sexuality and the Politics of South Aasian Studies},
   author= {Urban, Hugh B.},
@@ -1892,6 +1890,15 @@ keywords={printsource},
   keywords={printsource},
 }
 
+@book{singh2005paratrisika,
+  author = {Singh, Jaideva and Swami Lakshman Joo and Bettina Baumer},
+  title = {Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism},
+  year = {2005},
+  address= {New Delhi},
+  publisher = {Motilal Banarsidass Publishers Pvt. Ltd},
+  keywords={seclit}, 
+}
+
 @book{steinkellner2005,
   title={Jinendrabuddhi's Viśālāmalavatī Pramāṇasamuccayaṭīkā Chapter 1 - Part I: Critical Edition},
   editor={Steinkellner, E. and Krasser, H. and Lasic, H.},
@@ -2123,7 +2130,7 @@ keywords={printsource},
    keywords={printsource},
  }
 
-@book{shivayogapradipikax,
+@book{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    editor={Powell, Seth David},   
    year={2023},
@@ -2244,7 +2251,6 @@ keywords={printsource},
   year = {1949},
   publisher = {Alfred Kröner Verlag},
   address = {Stuttgart},
-  edition = {1},
   keywords={seclit},
 }
 
@@ -2416,7 +2422,7 @@ keywords={seclit},
 @codex{yogasarasangraha,
   title = {Yogasārasaṅgraha},
   address = {French Institute of Pondicherry (IFP)},
-  note = {Manuscript IFP transcript T.859, Manuscript D.4373, Government Oriental Manuscripts Library (GOML), Madras}
+  note = {Manuscript IFP transcript T.859, Manuscript D.4373, Government Oriental Manuscripts Library (GOML), Madras},
   keywords={codex},
 }
 
