--- a/intro.bib
+++ b/intro.bib
@@ -1912,6 +1912,15 @@ keywords={printsource},
   keywords={printsource},
 }
 
+@book{horstmann2023shrine,
+  author    = {Horstmann, Monika and Rajpurohit, Dalpat S.},
+  title     = {In the Shrine of the Heart: Sants of Rajasthan from the Sixteenth and Seventeenth Centuries},
+  publisher = {Heidelberg Asian Studies Publishing},
+  year      = {2023},
+  address   = {Heidelberg},
+  doi       = {10.11588/hasp.1151},
+  url       = {https://doi.org/10.11588/hasp.1151}
+}
 
 @book{tanselle1989,
   title={A rationale of textual criticism},
@@ -2114,7 +2123,7 @@ keywords={printsource},
    keywords={printsource},
  }
 
-@book{shivayogapradipikax,
+@book{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    editor={Powell, Seth David},   
    year={2023},
@@ -2227,6 +2236,15 @@ keywords={printsource},
     publisher={The Lonavla Yoga Institute (India)},
     address={Lonavla},
     keywords={printsource},
+}
+
+@book{glasenapp1949philosophie,
+  author = {Glasenapp, Helmuth von},
+  title = {Die Philosophie der Inder},
+  year = {1949},
+  publisher = {Alfred Kröner Verlag},
+  address = {Stuttgart},
+  keywords={seclit},
 }
 
 @book{encyclopediaasana,
@@ -2392,6 +2410,13 @@ keywords={seclit},
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
+}
+
+@codex{yogasarasangraha,
+  title = {Yogasārasaṅgraha},
+  address = {French Institute of Pondicherry (IFP)},
+  note = {Manuscript IFP transcript T.859, Manuscript D.4373, Government Oriental Manuscripts Library (GOML), Madras},
+  keywords={codex},
 }
 
 @codex{yogacintamanilahore,
