continued with Siddhayoga and imprved edition until after cakras and avadhuta section

--- a/bindu.bib
+++ b/bindu.bib
@@ -2620,10 +2620,10 @@ keywords={seclit},
   author={Kanamarlapudi, Sravani},
   year={2023}, 
   journal={Journal of Hindu Studies},
-  volume={XX}, 
-  pages={XX-XX}, 
+  volume={16}, 
+  pages={241-269}, 
   publisher={Oxford University Press},
-  note={When accessing this article, the Journal's volume had not yet been completed. Hence the volume number and the pages are not fixed.},  
+  doi={https://doi.org/10.1093/jhs/hiad017},  
   address={Oxford},
   keywords={seclit}, 
 }  
