finished intro until Rājayoga

--- a/bindu.bib
+++ b/bindu.bib
@@ -2130,6 +2130,19 @@ keywords={printsource},
    keywords={printsource},
  }
 
+@inbook{mallinson2018vajrolimudra,
+  title        = {Yoga and Sex: What is the Purpose of Vajrolīmudrā?},
+  author       = {James Mallinson},
+  booktitle    = {Yoga in Transformation: Historical and Contemporary Perspectives},
+  editor       = {Karl Baier and Philipp A. Maas and Karin Preisendanz},
+  year         = {2018},
+  publisher    = {V\&R unipress},
+  address      = {Göttingen},
+  pages        = {181--223},
+  note         = {With 55 figures. Published by Vienna University Press.}
+}
+
+
 @book{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    editor={Powell, Seth David},   
@@ -2413,10 +2426,15 @@ keywords={seclit},
 
 @codex{codexbmt,
    title={Brahmayāmalatantra},  
-   %author={Unbekannt},
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
+}
+
+@codex{hbp,
+title={Haṭhābhyāsapaddhati},
+note={Unpublished manuscript. Bhārat Itihās Samśodhak Mandal (Pune) ms. 46/440 (catalogued as Āsanabandhāh).},
+keywords={codex},
 }
 
 @codex{yogasarasangraha,
@@ -2872,6 +2890,16 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    %url={http://www.jstor.org/stable/43496667},
    keywords={seclit},
 }
+
+@book{demichelishistory2004,
+  author    = {De Michelis, Elizabeth},
+  title     = {A History of Modern Yoga},
+  year      = {2004},
+  publisher = {Continuum},
+  address   = {London},
+  keywords  = {seclit},
+}
+
 
 @book{majumdar1961x,
    title={The History of Bengal},
