--- a/intro.bib
+++ b/intro.bib
@@ -1476,8 +1476,6 @@ Sound},
   keywords={printsource},
 }
 
-
-
 @book{urban2010,
   title={The Power of Tantra: Religion, Sexuality and the Politics of South Aasian Studies},
   author= {Urban, Hugh B.},
@@ -1892,6 +1890,15 @@ keywords={printsource},
   keywords={printsource},
 }
 
+@book{singh2005paratrisika,
+  author = {Singh, Jaideva and Swami Lakshman Joo and Bettina Baumer},
+  title = {Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism},
+  year = {2005},
+  address= {New Delhi},
+  publisher = {Motilal Banarsidass Publishers Pvt. Ltd},
+  keywords={seclit}, 
+}
+
 @book{steinkellner2005,
   title={Jinendrabuddhi's Viśālāmalavatī Pramāṇasamuccayaṭīkā Chapter 1 - Part I: Critical Edition},
   editor={Steinkellner, E. and Krasser, H. and Lasic, H.},
@@ -2122,6 +2129,19 @@ keywords={printsource},
    address={Woodstock},
    keywords={printsource},
  }
+
+@inbook{mallinson2018vajrolimudra,
+  title        = {Yoga and Sex: What is the Purpose of Vajrolīmudrā?},
+  author       = {James Mallinson},
+  booktitle    = {Yoga in Transformation: Historical and Contemporary Perspectives},
+  editor       = {Karl Baier and Philipp A. Maas and Karin Preisendanz},
+  year         = {2018},
+  publisher    = {V\&R unipress},
+  address      = {Göttingen},
+  pages        = {181--223},
+  note         = {With 55 figures. Published by Vienna University Press.}
+}
+
 
 @book{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
@@ -2406,10 +2426,15 @@ keywords={seclit},
 
 @codex{codexbmt,
    title={Brahmayāmalatantra},  
-   %author={Unbekannt},
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
+}
+
+@codex{hbp,
+title={Haṭhābhyāsapaddhati},
+note={Unpublished manuscript. Bhārat Itihās Samśodhak Mandal (Pune) ms. 46/440 (catalogued as Āsanabandhāh).},
+keywords={codex},
 }
 
 @codex{yogasarasangraha,
@@ -2613,10 +2638,10 @@ keywords={seclit},
   author={Kanamarlapudi, Sravani},
   year={2023}, 
   journal={Journal of Hindu Studies},
-  volume={XX}, 
-  pages={XX-XX}, 
+  volume={16}, 
+  pages={241-269}, 
   publisher={Oxford University Press},
-  note={When accessing this article, the Journal's volume had not yet been completed. Hence the volume number and the pages are not fixed.},  
+  doi={https://doi.org/10.1093/jhs/hiad017},  
   address={Oxford},
   keywords={seclit}, 
 }  
@@ -2865,6 +2890,16 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    %url={http://www.jstor.org/stable/43496667},
    keywords={seclit},
 }
+
+@book{demichelishistory2004,
+  author    = {De Michelis, Elizabeth},
+  title     = {A History of Modern Yoga},
+  year      = {2004},
+  publisher = {Continuum},
+  address   = {London},
+  keywords  = {seclit},
+}
+
 
 @book{majumdar1961x,
    title={The History of Bengal},
