finished intro  bhaktiyoga and started to work on ashtangayoga

--- a/preamble.tex
+++ b/preamble.tex
@@ -29,6 +29,7 @@
 \PassOptionsToPackage{hyphens}{url}
 \usepackage{hyperref}
 \usepackage{pdflscape}
+%\usepackage{amsmath}
 \usepackage{cleveref}
 \usepackage{url}
 \usepackage{cleveref}
@@ -41,6 +42,7 @@
 \usepackage{ragged2e}
 \usepackage{longtable}
 \usepackage{pdflscape}
+\usepackage{float}
 
 %\usepackage{bigfoot}
 %%% more functions
