described all yogas now conclusion

--- a/bindu.bib
+++ b/bindu.bib
@@ -12,6 +12,32 @@
   keywords    = {seclit},
 }
 
+@article{endo1993,
+title={The Works and Flourishing Period of Nārāyaṇatīrtha, the Author of the Yogasiddhāntacandrikā}, 
+author= {Ko, Endo},  
+year={1993},
+pages={41--60},
+series={Nagoya Studies in Indian Culture and Buddhism},
+volume={13}.
+publisher={Nagoya University, Department of Indian Philosophy},
+address={Nagoya},
+keywirds={seclit},
+}
+
+
+@article{endo1998,
+title={The Medieval Yoga-s and the Patanjala-Yoga: Narayana
+Tirtha’s Interpretation of the Yogasutra.}, 
+author= {Ko, Endo},  
+year={1998},
+pages={25--39},
+series={The Journal of the Faculty of Letters},
+volume={44}.
+publisher={Nagoya University, Department of Indian Philosophy},
+address={Nagoya},
+keywirds={seclit},
+}
+
 @inbook{birch2018proliferation,
   author       = {Birch, Jason},
   title        = {The Proliferation of Āsana-s in Late-Mediaeval Yoga Texts},
@@ -2351,7 +2377,7 @@ address={Pondicherry},
 }
 
 
-@book{yogakarnika,
+@book{yogakarnikai,
   title={Yogakarṇikā},
   subtitle={Yogakarṇikā (An Ancient Treatise on Yoga)},
   editor={Nath Sharma, Narendra},
@@ -2594,6 +2620,14 @@ keywords={codex},
   address={Petersburg},
   keywords={seclit},
 }
+
+@book{petersburger7,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={7},
+  address={Petersburg},
+  keywords={seclit},
 
 @book{shabdakalpadruma, 
  title={Śabdakalpadruma}, 
