--- a/intro.bib
+++ b/intro.bib
@@ -2595,6 +2595,14 @@ keywords={codex},
   keywords={seclit},
 }
 
+@book{petersburger7,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={7},
+  address={Petersburg},
+  keywords={seclit},
+
 @book{shabdakalpadruma, 
  title={Śabdakalpadruma}, 
  author={Radhakanta, Deva and Varadaprasada, Vasu and Haricana, Vasu}, 
